# flink

./: .gitignore  README.md  main.py  pyproject.toml
project/: Dockerfile.flink  README.md  docker-compose.yml  flink-config.yaml  homework.md  run_all.sh
project/sql/: create_tables.sql
project/src/consumers/: consumer_green_trips_count.py
project/src/job/: green_trips_common.py  green_trips_session_5m_job.py  green_trips_tip_hourly_job.py  green_trips_tumbling_5m_job.py
project/src/producers/: producer_green_trips.py
ressources/pictures/: article_kafka_banner.textClipping
workshop/: Dockerfile.flink  README.md  docker-compose.yml
workshop/notebooks/: nyc_yellow_taxi.py
workshop/scripts/py/: test.py
workshop/scripts/sql/: aggregation_table.sql  processed_event.sql  processed_events_aggregated.sql
workshop/src/consumers/: consumer.py  consumer_postgres.py
workshop/src/job/: aggregation_job.py  pass_through_job.py
workshop/src/producers/: producer.py
